# paguroidea

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  shell.nix
.github/workflows/: build.yaml
benches/csv/: Cargo.toml  build.rs  csv.pag
benches/csv/benches/: benchmarks.rs  csv.pest
benches/csv/src/: lib.rs
benches/json/: Cargo.toml  build.rs  json-scan.pag  json.pag
benches/json/benches/: benchmarks.rs  json.lalrpop  json.pest  json_logos.lalrpop  lalr_def.rs  lalrlexer.rs  twitter.json
benches/json/src/: .gitignore  lib.rs  scanner.rs
derivative-lexer/: Cargo.toml
derivative-lexer/src/: class.rs  congruence.rs  derivative.rs  intervals.rs  lib.rs  normalization.rs  regex_tree.rs  vector.rs
pag-compiler/: Cargo.toml
pag-compiler/src/: lib.rs
pag-derive/: Cargo.toml
pag-derive/src/: lib.rs
pag-lexer/: Cargo.toml
pag-lexer/src/: congruence.rs  derivative.rs  intervals.rs  lib.rs  lookahead.rs  normalization.rs  normalization2.rs  regex_tree.rs  regex_tree2.rs  unicode.rs  utilities.rs  vector.rs
pag-parser/: Cargo.toml
pag-parser/src/: core_syntax.rs  fusion.rs  fusion2.rs  lib.rs  nf.rs  utilities.rs
pag-parser/src/frontend/: example.pag  fixpoint.rs  grammar.pest  lexical.rs  mod.rs  syntax.rs  unicode.rs
pag-parser/src/tests/: err_alternation_ambiguity.pag  err_null_sequence_ambiguity.pag  err_nullable_token.pag  err_sequence_ambiguity.pag  err_unguarded_fixpoint.pag  mod.rs
pag-parser/src/tests/failure/: err_alternation_ambiguity.pag  err_cyclic_token.pag  err_multiple_definitions_in_lexer.pag  err_multiple_definitions_in_parser.pag  err_multiple_skips.pag  err_null_sequence_ambiguity.pag  err_nullable_token.pag  err_sequence_ambiguity.pag  err_undefined_grammar_rule.pag  err_undefined_token_in_lexer.pag  err_undefined_token_in_parser.pag  err_unguarded_fixpoint.pag  mod.rs
pag-parser/src/type_system/: binding_proxy.rs  context.rs  fixpoint.rs  mod.rs  type_check.rs
pag-parser2/: Cargo.toml
pag-parser2/src/: debug.rs  lib.rs  utils.rs
pag-parser2/src/frontend/: ast.rs  mod.rs  parse.rs
pag-parser2/src/nf/: inference.rs  mod.rs  normalization.rs  semact.rs  translation.rs
pag-parser2/src/tyck/: binding_proxy.rs  context.rs  mod.rs  type_check.rs
pag-util/: Cargo.toml
pag-util/src/: lib.rs  source.rs
pag-util/src/internal/: misc.rs  mod.rs
parser/: Cargo.toml
parser/src/: core_syntax.rs  fusion.rs  lib.rs  nf.rs  utilities.rs
parser/src/frontend/: example.pag  lexical.rs  mod.rs  syntax.rs
parser/src/type_system/: context.rs  mod.rs
parser/src/type_system2/: context.rs  mod.rs
src/: lib.rs  utilities.rs
src/frontend/: example.pag  grammar.pest  mod.rs
src/type_system/: context.rs  mod.rs
tests/arith-expr/: Cargo.toml  arith.pag  build.rs
tests/arith-expr/src/: lib.rs
tests/sexpr-calculator/: Cargo.toml  build.rs  sexpr.pag
tests/sexpr-calculator/src/: lib.rs
tests/tokenizer/: Cargo.toml  build.rs
tests/tokenizer/src/: comment_and_string.rs  common_prefix.rs  generated.rs  length_differential.rs  lib.rs  tail_differential.rs
