[package]
name = "paguroidea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.5.7", features = [ "std", "memchr" ] }
pest_derive = "2.5.7"
smallvec = "1"
thiserror = "1"
lazy_static = "1"
error-stack = "0.3"
anyhow = { version = "1", features = [ "backtrace"] }
memchr = "2"
