# Copyright (c) 2023 Paguroidea Developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or http://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[workspace]
members = [
    "pag-lexer",
    "pag-parser",
    "pag-compiler",
    "tests/sexpr-calculator",
    "tests/arith-expr",
    "tests/tokenizer",
    "benches/csv",
    "benches/json",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [".github/*"]
categories = ["parsing"]
repository = "https://github.com/SchrodingerZhu/paguroidea"
rust-version = "1.71.0"
authors = [
    "Schrodinger ZHU Yifan <i@zhuyi.fan>",
    "QuarticCat <QuarticCat@pm.me>",
]
readme = "README.md"

[profile.release]
debug = true
lto = true
