[package]
name = "pag-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pag-parser = { path = "../pag-parser" }
syn = { version = "2.0", features = ["full"] }
prettyplease = { version = "0.2", features = ["verbatim"] }