# Copyright (c) 2023 Paguroidea Developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or http://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "pag-compiler"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT/Apache-2.0"
exclude = [".github/workflows/*"]
keywords = ["parser", "cfg", "grammar"]
categories = ["parsing"]
repository = "https://github.com/SchrodingerZhu/paguroidea"
description = "Parser-lexer fusion generator (compiler interface)"
rust-version = "1.71.0"
authors = ["Schrodinger ZHU Yifan <i@zhuyi.fan>", "QuarticCat <QuarticCat@pm.me>"]
documentation = "https://docs.rs/pag-compiler/"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pag-parser = { version = "0.1.0-alpha.1", path = "../pag-parser" }
syn = { version = "2.0", features = ["full"] }
prettyplease = { version = "0.2", features = ["verbatim"] }