[package]
name = "pag-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pag-parser = { path = "../pag-parser" }
syn = { version = "2.0", features = ["full"] }
quote = "1"
proc-macro2 = "1"