# Copyright (c) 2023 Paguroidea Developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or http://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "pag-parser"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.5.7", features = [ "std", "memchr" ] }
pest_derive = "2.5.7"
smallvec = "1"
thiserror = "1"
lazy_static = "1"
error-stack = "0.3"
anyhow = { version = "1", features = [ "backtrace"] }
memchr = "2"
pag-lexer = { path = "../pag-lexer"}
typed-arena = "2.0.2"
quote = "1.0.26"
proc-macro2 = "1.0"
ariadne = { version = "0.2", features = ["auto-color"] }
