# Copyright (c) 2023 Paguroidea Developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or http://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "pag-parser"
keywords = ["parser", "cfg", "grammar"]
description = "Parser-lexer fusion generator (parser generator)"
documentation = "https://docs.rs/pag-parser/"

version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
pest = { version = "2.5.7", features = ["std", "memchr"] }
pest_derive = "2.5.7"
smallvec = { version = "1", features = ["union"] }
lazy_static = "1"
pag-lexer = { version = "0.1.0-alpha.1", path = "../pag-lexer" }
typed-arena = "2.0.2"
quote = "1.0.26"
proc-macro2 = "1.0"
ariadne = { version = "0.3", features = ["auto-color"] }

[dev-dependencies]
strip-ansi-escapes = "0.1.1"
