# Copyright (c) 2023 Paguroidea Developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or http://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "pag-parser2"
keywords = ["parser", "cfg", "grammar"]
description = "Parser-lexer fusion generator (parser generator)"
documentation = "https://docs.rs/pag-parser/"

version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
syn = { version = "2.0.27", features = ["full"] }
quote = "1.0.9"
