# Copyright (C) 2023 Paguroidea Developpers
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at <https://mozilla.org/MPL/2.0/>.

[package]
name = "paguroidea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.5.7", features = [ "std", "memchr" ] }
pest_derive = "2.5.7"
smallvec = "1"
thiserror = "1"
lazy_static = "1"
error-stack = "0.3"
anyhow = { version = "1", features = [ "backtrace"] }
memchr = "2"
derivative-lexer = { path = "../derivative-lexer"}
typed-arena = "2.0.2"
quote = "1.0.26"
proc-macro2 = "1.0"