[package]
name = "pag-json"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
rand = { version = "0.8" }
snmalloc-rs = { version = "0.3", features = ["build_cc"] }
anyhow = "1"

[build-dependencies]
pag-compiler = { path = "../../pag-compiler" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pest = { version = "2.5.7", features = [ "std", "memchr" ] }
pest_derive = "2.5.7"

[[bench]]
name = "benchmarks"
harness = false