[package]
name = "pag-json"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false
autobenches = false

[dependencies]
rand = { version = "0.8" }
serde_json = "1.0"

[build-dependencies]
pag-compiler = { path = "../../pag-compiler" }
lalrpop = "0.20.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
snmalloc-rs = { version = "0.3", features = ["build_cc"] }
pest = { version = "2.5.7", features = [ "std", "memchr" ] }
pest_derive = "2.5.7"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.13.0"

[[bench]]
name = "benchmarks"
harness = false
