[package]
name = "arith-expr"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8" }

[build-dependencies]
pag-compiler = { path = "../../pag-compiler" }